# github-pulse

./: .env.example  .gitignore  .sqlfluff  CLAUDE.md  DESIGN_DECISIONS.md  Makefile  ProjectInfo.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: agg_event_type_daily.sql  agg_language_daily.sql  agg_repo_momentum.sql  agg_repo_trending_daily.sql  dim_repo.sql  fct_events.sql  schema.yml
dbt/models/staging/: _sources.yml  schema.yml  stg_github_events.sql
images/: README.md
ingestion/: __init__.py  backfill.py  config.py  download.py  load_bq.py  transform.py  upload_gcs.py
orchestration/: docker-compose.yml
orchestration/flows/: github_pulse.yml
orchestration/secrets/: README.md
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_transform.py
